Got routes & controllers done minus correct field
