# controller/music.js
@@ -1,0 +1,98 @@
+const mongodb = require("../db/connect");
+const ObjectId = require("mongodb").ObjectId;
+
+const getAllMusic = async (req, res) => {
+  // console.log("Getting all music");
+  const result = await mongodb.getDb().db().collection("music").find();
+  result.toArray().then((lists) => {
+    res.setHeader("Content-Type", "application/json");
+    res.status(200).json(lists);
+  });
+};
+
+const getMusicById = async (req, res) => {
+  // console.log("Getting music by ID");
+  const musicId = new ObjectId(req.params.id);
+  const result = await mongodb
+    .getDb()
+    .db()
+    .collection("music")
+    .find({ _id: musicId });
+  result.toArray().then((lists) => {
+    res.setHeader("Content-Type", "application/json");
+    res.status(200).json(lists[0]);
+  });
+};
+
+const addMusic = async (req, res) => {
+  // console.log("Add music to inventory");
+  const music = {
+    title: req.body.title,
+    author: req.body.author,
+    genre: req.body.genre,
+    summary: req.body.summary,
+  };
+  const response = await mongodb
+    .getDb()
+    .db()
+    .collection("music")
+    .insertOne(music);
+  if (response.acknowledged) {
+    res.status(201).json(response);
+  } else {
+    res
+      .status(500)
+      .json(response.error || "An error occurred while adding a music.");
+  }
+};
+
+const updateMusic = async (req, res) => {
+  // console.log("Update music information by ID");
+  const musicId = new ObjectId(req.params.id);
+  const music = {
+    title: req.body.title,
+    author: req.body.author,
+    genre: req.body.genre,
+    summary: req.body.summary,
+  };
+  const response = await mongodb
+    .getDb()
+    .db()
+    .collection("music")
+    .replaceOne({ _id: musicId }, music);
+  musicController;
+  if (response.acknowledged) {
+    res.status(204).json(response);
+  } else {
+    res
+      .status(500)
+      .json(response.error || "An error occurred while update the music.");
+  }
+};
+
+const deleteMusic = async (req, res) => {
+  // console.log("Delete music from inventory");
+  const musicId = new ObjectId(req.params.id);
+  const response = await mongodb
+    .getDb()
+    .db()
+    .collection("music")
+    .deleteOne({ _id: musicId }, true);
+  if (response.acknowledged) {
+    res.status(200).json(response);
+  } else {
+    res
+      .status(500)
+      .json(
+        response.error || "An error occurred while trying to delete the music."
+      );
+  }
+};
+
+module.exports = {
+  getAllMusic,
+  getMusicById,
+  addMusic,
+  updateMusic,
+  deleteMusic,
+};
