# routes/index.js
@@ -2,6 +2,9 @@ const router = require("express").Router();
 
 // router.use("/", require("./books"));
 router.use("/books", require("./books"));
+router.use("/movies", require("./movies"));
+router.use("/music", require("./games"));
+router.use("/games", require("./music"));
 router.use("/api-docs", require("./docs"));
 
 module.exports = router;
